--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author_image: "https://res.cloudinary.com/fanadewi19/image/upload/v1724100956/ms
 
 paginate:	5
 
-url: "http://myblog.***.***" # the base hostname & protocol for your site
+url: "https://fanadewi.github.io/" # the base hostname & protocol for your site
 baseurl: ""
 #used to display twitter cards
 # twitter_handle: '@ihavenone'
@@ -50,6 +50,13 @@ social:
 #    share_url: https://www.facebook.com/sharer.php
 #    share_title: ?t=
 #    share_link: "&amp;u="
+
+  - icon:	instagram
+    url:	https://instagram.com/fanadewi19
+    desc:	Follow me on instagram
+    share_url:
+    share_title:
+    share_link:
 
   - icon:	github
     url:	https://github.com/fanadewi
